2016-09-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/77638
	* parser.c (cp_parser_template_declaration_after_parameter): For 2
	argument operator"" template set ok to false for
	parm == error_mark_node.

	PR c++/77637
	* parser.c (cp_parser_std_attribute_list): Reject ... without
	preceding attribute.

2016-09-19  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR c++/77434
	* cvt.c (cp_convert_and_check): Suppress Wint-in-bool-context here.

2016-09-16  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/77639
	* parser.c (cp_parser_class_head): When
	processing_template_parmlist, don't assume that the
	class-head may start an explicit specialization.

2016-09-16  Jakub Jelinek  <jakub@redhat.com>

	PR c++/77482
	* error.c (dump_simple_decl): Only check DECL_DECLARED_CONCEPT_P
	if DECL_LANG_SPECIFIC is non-NULL.  Fix up formatting.

	PR c++/77338
	* constexpr.c (cxx_eval_constant_expression) <case PARM_DECL>: Only
	call is_really_empty_class on complete types.

	PR c++/77375
	* class.c (check_bases): Set CLASSTYPE_HAS_MUTABLE if any
	TYPE_HAS_MUTABLE_P for any bases.

2016-09-16  Jason Merrill  <jason@redhat.com>

	* class.c (check_bases, set_one_vmethod_tm_attributes): Use
	least_bit_hwi.
	* decl.c (cxx_init_decl_processing): Use pow2p_hwi.
	* parser.c (cp_parser_cilk_simd_vectorlength): Use pow2p_hwi.

2016-09-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/77549
	* name-lookup.c (consider_binding_level): Look through TREE_LIST
	and OVERLOAD.

2016-09-14  Marek Polacek  <polacek@redhat.com>

	* typeck.c (cp_build_unary_op): Diagnose incrementing boolean
	expressions.  Tweak an error message.

2016-09-14  Marek Polacek  <polacek@redhat.com>

	* cp-tree.h (cp_build_unary_op): Change nonconvert parameter type to
	bool.
	* decl2.c (one_static_initialization_or_destruction): Use true instead
	of 1.
	* init.c (build_vec_init): Use false instead of 0.
	* pt.c (tsubst_copy_and_build): Likewise.
	* semantics.c (simplify_loop_decl_cond): Likewise.